fix controls on ie8

--- a/src/DGCustomization/skin/basic/less/dg-zoom.ie.less
+++ b/src/DGCustomization/skin/basic/less/dg-zoom.ie.less
@@ -1,7 +1,9 @@
+
 .dg-zoom__out {
     width: 30px;
-    height: 33px;
+    height: 30px;
     }
-    .dg-zoom__button_type_out:before { /* Плашка для визуального слития двух кнопок в одну */
-        top: -2px;
+    .dg-zoom__button_type_out {
+        width: 30px;
+        height: 30px;
         }
